--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<img src="file:///Users/gw_09/Downloads/re.jpg">
+<img src="https://t1.daumcdn.net/thumb/R1280x0/?fname=http://t1.daumcdn.net/brunch/service/user/1Tjp/image/9L1gG0yRUHbKFk_JcylsJLpj5ZM.JPG">
 <form action="action.php" method="post">
 	<p>이름: <input type="text" name="name" /></p>
 	<p>연락처: <input type="text" name="phone" /></p>
