--- a/form.html
+++ b/form.html
@@ -18,6 +18,12 @@
 		<input type="radio" name="time" value="저녁" checked="checked" />	
 		저녁
 	</p>
+<p>사전 확인:
+	<br/>
+	<input type="checkbox" name="service[]" value="비흡연석" check="checked"/>비흡연석
+	<input type="checkbox" name="service[]" value="창가" check="checked"/>창가
+	<input type="checkbox" name="service[]" value="주차장" check="checked"/>주차장
+	</p>
 	<p>선호하는 쉐프</p>
 	<select name="쉐프">
 		<option value="조리장">조리장</option>
