--- a/css.html
+++ b/css.html
@@ -1,13 +1,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<style type="text/css">
+			h1{color: pink;}
+		</style>
+
 	</head>
 		<title>CSS 스타일 적용하기</title>
-		<title style="color: red;">
 	<body>
 		<h1>고정희 / 고백</h1>
-		<h1 style="color: pink;">
-		<p style="color: pink;">
 		<p>너에게로 가는</p>
 		<p>그리움의 전기줄에</p>
 			<p>감</p>
