--- a/style.html
+++ b/style.html
@@ -3,6 +3,8 @@
 		<meta charset="utf-8">
 		<style type="text/css">
 			h1{color: pink; font-size: 30px; font-family:"HY견명조",serif; }
+			p{color: pink;}
+			
 		</style>
 
 	</head>
