--- a/style.html
+++ b/style.html
@@ -9,6 +9,7 @@
 
 	</head>
 	<body>
+		<center>
 		<h1>고정희 / 고백</h1>
 		<p>너에게로 가는</p>
 		<p>그리움의 전기줄에</p>
@@ -17,6 +18,7 @@
 			<p>되</p>
 			<p>었</p>
 			<p>다</p>
+		</center>
 			
 	</body>
 </html>
