--- a/style.html
+++ b/style.html
@@ -2,8 +2,9 @@
 	<head>
 		<meta charset="utf-8">
 		<style type="text/css">
+			@import url(//fonts.googleapis.com/earlyaccess/karlatamilinclined.css);
 			h1{color: pink; font-size: 30px; font-family:"HY견명조",serif; }
-			p{color: pink;}
+			p{color: pink; font-family: 'Jeju Myeongjo', serif;}
 			
 		</style>
 
