--- a/color.html
+++ b/color.html
@@ -5,7 +5,7 @@
 	<style>
 	body{
 		height: 55px;
-	
+		background: red;
 		background: : linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
 	}
 	#grad{
