--- a/color.html
+++ b/color.html
@@ -4,9 +4,7 @@
 		<meta charset="utf-8">
 	<style>
 	body{
-		height: 55px;
-		background: red;
-		background: : linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+		background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
 	}
 	#grad{
 		text-align:center;
