--- a/color.html
+++ b/color.html
@@ -3,26 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 	<style>
-	body{
-		background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-	}
-	#grad{
-		text-align:center;
-		margin:auto;
-		color:#888888;
-		font-size:40px;
-		font-weight:bold
-	}
-	p{
-		text-align: center;
+	body{background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);}
 	</style>
-</head>
+	</head>
 <body>
-
-	<div id="grad">
-		(무지개 배경)<p>
-		Gradient Background
-	</div>
+<div id="grad">
+	(무지개 배경)<p>
+	Gradient Background
+</div>
 	<p><strong>Note:</strong> Internet Explorer 9 이하는 지원 안함 </p>
-	</body>
+</body>
 </html>
