--- a/tabled.html
+++ b/tabled.html
@@ -1,5 +1,6 @@
 
-	<html>
+<!DOCTYPE html>
+<html>
 	<head>
     <meta charset="utf-8">
 		<title>목록, 테이블, 폼</title>
@@ -38,7 +39,7 @@
 				text-shadow: 1px 1px 1px #ffffff;}
 			tr.even td, tr.even th {
 				background-color: #F0FFFF;}
-er			tr.head th:first-child {
+			tr.head th:first-child {
 				border-top-left-radius: 10px;}
 			tr.head th:last-child {
 				border-top-right-radius: 10px;}
