--- a/hos2.html
+++ b/hos2.html
@@ -52,12 +52,12 @@
  		<input type = "button" 
           value = "1" 
            name = "1" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos1'"> <br/><br/>
 
         <input type = "button" 
           value = "2" 
            name = "2" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos2'"> <br/><br/>
 
         <input type = "button" 
           value = "3" 
