--- a/hos1.html
+++ b/hos1.html
@@ -46,17 +46,17 @@
  		<input type = "button" 
           value = "1" 
            name = "1" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos1'"> <br/><br/>
 
         <input type = "button" 
           value = "2" 
            name = "2" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos2'"> <br/><br/>
 
         <input type = "button" 
           value = "3" 
            name = "3" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos3'"> <br/><br/>
  	</div>
 </body>
 </html>
