--- a/hos2.html
+++ b/hos2.html
@@ -62,7 +62,7 @@
         <input type = "button" 
           value = "3" 
            name = "3" 
-        onclick = "location.href='C:\Users\samsung\Downloads\Hos (4)'"> <br/><br/>
+        onclick = "location.href='https://pdj98.github.io/html-css/hos3'"> <br/><br/>
  	</div>
 </body>
 </html>
