--- a/hos1.html
+++ b/hos1.html
@@ -21,11 +21,7 @@
 	</div>
 
 	<div class="mainUtube">
- 	<p style="text-align: center;">
- 	<video width="640" height="480" controls>
- 		<source src="<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
- 	</video>
- 	</p>
+ 	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
  	</div>
  	
  	<div class="main">
