--- a/hos1.html
+++ b/hos1.html
@@ -20,7 +20,7 @@
 		</p>
 	</div>
 
-	<div class="mainUtube">
+	<div=style="width=720px;">
  	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
  	</div>
  	
