--- a/hos1.html
+++ b/hos1.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<div=style="width=720px;">
- 	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
+ 	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
  	</div>
  	
  	<div class="main">
