--- a/hos1.html
+++ b/hos1.html
@@ -1,11 +1,6 @@
 <html>
 <meta charset = "utf-8">
 
-<style type ="text/css">
-.mainimg{width: 720px; margin: 0 auto;}
-
-
-</style>
 
 <body>
 	<div class="title">
@@ -15,9 +10,9 @@
 	</div>
 	
 	<div class="mainimg">
-		<p style="text-align: center;">
+		<center>
 			<img src="https://cdn.namuwikiusercontent.com/s/11462e11209fb3771b3c59f341b66f81d15743ca13124d5675d4a2c0ae688edf81756ffaada2971c87e33cafc076484d9158d6ee01db443b691612391ecaf43fd873ce946890b4718c9437cb7485fa07?e=1533960285&k=Co59aiHwVK2QnkB0xcu_Lw">
-		</p>
+		</center>
 	</div>
 
 	<div=style="width=720px;">
