--- a/hos1.html
+++ b/hos1.html
@@ -13,11 +13,13 @@
 		<center>
 			<img src="https://cdn.namuwikiusercontent.com/s/11462e11209fb3771b3c59f341b66f81d15743ca13124d5675d4a2c0ae688edf81756ffaada2971c87e33cafc076484d9158d6ee01db443b691612391ecaf43fd873ce946890b4718c9437cb7485fa07?e=1533960285&k=Co59aiHwVK2QnkB0xcu_Lw">
 		</center>
+		<hr>
 	</div>
 
-	<div=style="width=720px;">
+	<div style="width: 720px;" id="movie">
  	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
- 	</div>
+ 	<hr>
+	</div>
  	
  	<div class="main">
  		<p style="font-size: 30;">
