--- a/hos1.html
+++ b/hos1.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div style="width: 720px;" id="movie">
- 	<iframe width="560" height="315" src="https://youtu.be/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+ 	<iframe width="720" height="315" src="https://www.youtube.com/embed/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
  	<hr>
 	</div>
  	
