--- a/hos2.html
+++ b/hos2.html
@@ -1,13 +1,6 @@
 <html>
 <meta charset = "utf-8">
 
-<style type ="text/css">
-.mainimg{width: 720px; margin: 0 auto;}
-
-.mainUtube{width: 480px; margin: 0 auto;}
-
-</style>
-
 <body>
 	<div class="title">
 		<center>
@@ -16,17 +9,13 @@
 	</div>
 	
 	<div class="mainimg">
-		<p style="text-align: center;">
+		<center>
 			<img src="https://cdn.namuwikiusercontent.com/s/60352877ad6d3f23bc8e49f9a4708356f0eb21882fe90f854c393124008ace8fb3ac008d933441d6de33bae8b0b831c65b360580847045b78a8ea96fc69c06cead496eda37bc8d49fc3cde74838bce1a?e=1532632313&k=Qzp9_wPYK582frFjw70s1A">
-		</p>
+		</center>
 	</div>
 
-	<div class="mainUtube">
- 	<p style="text-align: center;">
- 	<video width="640" height="480" controls>
- 		<source src="<iframe width="560" height="315" src="https://www.youtube.com/watch?v=mHiWDj0PzUo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
- 	</video>
- 	</p>
+	<div style: "width=720px;">
+ 		<source src="<iframe width="720" height="315" src="https://www.youtube.com/embed/iSJiNusXCXc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>"
  	</div>
  	
  	<div class="main">
