--- a/hos2.html
+++ b/hos2.html
@@ -15,8 +15,11 @@
 	</div>
 
 	<div style: "width=720px;">
+		<center>
  		<source src="<iframe width="720" height="315" src="https://www.youtube.com/embed/iSJiNusXCXc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>"
- 	</div>
+		</center>
+		<hr>
+	</div>
  	
  	<div class="main">
  		<p style="font-size: 30;">
