--- a/hos1.html
+++ b/hos1.html
@@ -17,8 +17,10 @@
 	</div>
 
 	<div style="width: 720px;" id="movie">
+		<center>
  	<iframe width="720" height="315" src="https://www.youtube.com/embed/vja1ANMYq8g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
- 	<hr>
+		</center>
+			<hr>
 	</div>
  	
  	<div class="main">
