--- a/hos2.html
+++ b/hos2.html
@@ -14,11 +14,11 @@
 		</center>
 	</div>
 
-	<div style: "width=720px;">
+	<div style="width: 720px;" id="movie">
 		<center>
- 		<source src="<iframe width="720" height="315" src="https://www.youtube.com/embed/iSJiNusXCXc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>"
+ 	<iframe width="720" height="315" src="https://www.youtube.com/embed/iSJiNusXCXc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</center>
-		<hr>
+			<hr>
 	</div>
  	
  	<div class="main">
