--- a/hos3.html
+++ b/hos3.html
@@ -1,13 +1,6 @@
 <html>
 <meta charset = "utf-8">
 
-<style type ="text/css">
-.mainimg{width: 720px; margin: 0 auto;}
-
-.mainUtube{width: 480px; margin: 0 auto;}
-
-</style>
-
 <body>
 	<div class="title">
 		<center>
@@ -16,18 +9,17 @@
 	</div>
 	
 	<div class="mainimg">
-		<p style="text-align: center;">
+		<center>
 			<img src="https://cdn.namuwikiusercontent.com/s/4b8a876c2e37761eb5c3e6b8ee3758bba132f9ec0536088263ebbe8dd6e42802053f94fb970ed82c9c64cfb80e676f733c0ed538d1f22e675e291f6a50c207f80ec97fc515b65ba6bf18ddd9579b14b7?e=1530093078&k=zrzguU_Ga-HoVanJqJaaFA">
-		</p>
+		</center>
 	</div>
 
-	<div class="mainUtube">
- 	<p style="text-align: center;">
- 	<video width="640" height="480" controls>
- 		<source src="<iframe width="560" height="315" src="https://www.youtube.com/embed/x-AW-gz813s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>" type="video/mp4">
- 	</video>
- 	</p>
- 	</div>
+	<div style="width: 720px;" id="movie">
+		<center>
+ 	<iframe width="720" height="315" src="https://www.youtube.com/embed/fjXcave7HEA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</center>
+			<hr>
+	</div>
  	
  	<div class="main">
  		<p style="font-size: 30;">
